# file-encoding-converter

./: .gitignore  LICENSE  check_check_test.tsv  convert_file_to_utf8lf.py  pyproject.toml  readme.md
